# triangle_counting_gpu_v2

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  docker-build.sh  gpu.cu  graph.cpp  graph_generator.py  main.cpp  report.md  test.cpp
.circleci/: config.yml
nvtc/: CMakeLists.txt  MyGraph.h  TrCountingGraph.cpp  TrCountingGraph.h  config.h.in  counting_cpu.cpp  counting_cpu.h  gpu-thrust.cu  gpu.cu  gpu.h  graph.cpp  graph.h  main.cpp  mygraph.cpp  timer.cpp  timer.h
