cmake_minimum_required(VERSION 3.13)
project(triangle_counting_gpu_variant CUDA CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CUDA_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
include_directories(${CMAKE_SOURCE_DIR})
option(TIMECOUNTING "counting time used" OFF)
option(CODEGPU "codes can be run on GPU" ON)
option(TRCOUNTING "counting the number of triangles" ON)
option(VERBOSE "verbose mode" OFF)
option(OPENMP "use openmp" ON)
if(TIMECOUNTING)
    add_definitions("-DTIMECOUNTING=1")
endif()
if(OPENMP)
  find_package(OpenMP REQUIRED)
  add_definitions("-DOPENMP=1")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_subdirectory(nvtc)
if(ENABLE_TESTING)
  include(CTest)
  find_package(GTest REQUIRED)
  find_package(Threads REQUIRED)
  add_executable(test_alg test.cpp)
  if(V2)
      target_compile_definitions(test_alg PUBLIC "-DSECONDVERSION=1")
  endif()
  if(CODEGPU)
      target_compile_definitions(test_alg PUBLIC "-DGPU=1")
  endif()
  target_link_libraries(test_alg GTest::GTest GTest::Main Threads::Threads nvtc_variant_cu nvtc_variant)
  add_test(NAME test_alg COMMAND test_alg)
endif()
