add_library(nvtc_variant_cu gpu.cu gpu-thrust.cu)
if("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG")
    target_compile_options(nvtc_variant_cu PRIVATE "-G")
    target_compile_options(nvtc_variant_cu PRIVATE "-O0")
else()
    target_compile_options(nvtc_variant_cu PRIVATE "-Xptxas")
    target_compile_options(nvtc_variant_cu PRIVATE "-O2")
endif()

add_library(nvtc_variant graph.cpp timer.cpp mygraph.cpp counting_cpu.cpp)
if(OPENMP AND UNIX)
    target_compile_definitions(nvtc_variant PUBLIC "-D_GLIBCXX_PARALLEL")
endif()
add_executable(nvtc-variant main.cpp)
if(CODEGPU)
    target_compile_definitions(nvtc-variant PUBLIC "-DGPU=1")
endif()
if(V2)
    target_compile_definitions(nvtc-variant PUBLIC "-DSECONDVERSION=1")
endif()
if(TRCOUNTING)
    target_compile_definitions(nvtc-variant PUBLIC "-DTRCOUNTING=1")
endif()
if(VERBOSE)
    target_compile_definitions(nvtc-variant PUBLIC "-DVERBOSE=1")
endif()
target_link_libraries(nvtc-variant nvtc_variant_cu nvtc_variant)
