configure_file(config.h.in config.h)
if(CODEGPU)
    add_library(nvtc_variant_cu gpu.cu gpu-thrust.cu)
    if("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG")
        target_compile_options(nvtc_variant_cu PRIVATE "-G")
        target_compile_options(nvtc_variant_cu PRIVATE "-O0")
    else()
        target_compile_options(nvtc_variant_cu PRIVATE "-Xptxas")
        target_compile_options(nvtc_variant_cu PRIVATE "-O2")
    endif()
endif()
add_library(nvtc_variant TrCountingGraph.cpp)
if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(nvtc_variant PRIVATE --coverage)
    target_link_libraries(nvtc_variant INTERFACE --coverage)
endif()
if(OPENMP AND UNIX)
    target_compile_definitions(nvtc_variant PUBLIC "-D_GLIBCXX_PARALLEL")
endif()
if(PROF AND UNIX)
    if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG")
    # in release mode, add debug symbol
        target_compile_options(nvtc_variant PUBLIC "-g")
    endif()
    target_compile_options(nvtc_variant PRIVATE "-pg")
    target_link_libraries(nvtc_variant INTERFACE "-pg")
endif()
add_executable(nvtc-variant main.cpp)
if(CODEGPU)
    target_link_libraries(nvtc-variant nvtc_variant_cu)
endif()
if(MPI)
    target_link_libraries(nvtc_variant PUBLIC ${MPI_CXX_LIBRARIES})
endif()
target_link_libraries(nvtc-variant nvtc_variant)

